# django-slack-tools

./: .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.override.yaml  docker-compose.yaml  manage.py  mkdocs.yaml  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yaml  docker-compose.override.yaml  onCreateCommand.sh  postAttachCommand.sh
.github/: dependabot.yaml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
django_slack_bot/: app_settings.py  apps.py  backends.py  choices.py  message.py  settings.py  views.py
django_slack_bot/admin/: __init__.py  mention.py  message.py  message_recipient.py  messaging_policy.py  recipient.py
django_slack_bot/backends/: __init__.py  base.py  dummy.py  logging.py  slack.py
django_slack_bot/migrations/: 0001_initial.py  0002_auto_20231211_1349.py  0002_auto_20231217_0551.py  0002_create_special_mentions.py  0003_auto_20231211_1356.py  0003_auto_20231217_0639.py  0003_auto_20231230_1249.py  0004_alter_slackmessagerecipient_mentions.py  0004_slackmessagingpolicy_template.py  0005_slackmessage_header_alter_slackmessage_body.py  0005_slackmessagerecipient_alias.py  0006_remove_slackmessage_parent_ts.py  0006_slackmessage_channel.py  0006_slackmessagingpolicy_header_defaults_and_more.py  0007_alter_slackmessagerecipient_channel.py  0007_slackmessage_permalink_and_more.py  0008_remove_slackmention_mention_slackmention_mention_id_and_more.py
django_slack_bot/models/: __init__.py  mention.py  message.py  message_recipient.py  messaging_policy.py  recipient.py
django_slack_bot/slack_messages/: apps.py  message.py
django_slack_bot/slack_messages/admin/: __init__.py  mention.py  message.py  message_recipient.py  messaging_policy.py
django_slack_bot/slack_messages/backends/: base.py  dummy.py  logging.py  slack.py
django_slack_bot/slack_messages/migrations/: 0001_initial.py  0002_slackmessage_exception.py
django_slack_bot/slack_messages/models/: mention.py  message.py  message_recipient.py  messaging_policy.py
django_slack_bot/utils/: cache.py  dict_template.py  fields.py  model_mixins.py  slack.py  validators.py  widgets.py
django_slack_bot/utils/slack/: __init__.py  django.py  message.py  misc.py  workspace.py
django_slack_tools/: app_settings.py  views.py
django_slack_tools/messenger/: messenger.py  request.py  response.py  shortcuts.py
django_slack_tools/messenger/backends/: __init__.py  base.py  dummy.py  slack.py
django_slack_tools/messenger/middlewares/: base.py
django_slack_tools/messenger/template_loaders/: __init__.py  base.py
django_slack_tools/slack_events/: views.py
django_slack_tools/slack_messages/: apps.py  celery.py  message.py  messenger.py  request.py  response.py  shortcuts.py  tasks.py  validators.py
django_slack_tools/slack_messages/admin/: mention.py  message.py  message_recipient.py  messaging_policy.py
django_slack_tools/slack_messages/backends/: __init__.py  base.py  dummy.py  logging.py  slack.py
django_slack_tools/slack_messages/message_templates/: __init__.py  base.py  django.py  python.py
django_slack_tools/slack_messages/messenger/: __init__.py  message_templates.py  middlewares.py  template_loaders.py
django_slack_tools/slack_messages/middlewares/: __init__.py  base.py  django.py
django_slack_tools/slack_messages/migrations/: 0001_initial.py  0002_default_policy.py  0003_default_recipient.py  0004_slackmessagingpolicy_template_type.py  0005_alter_slackmessagingpolicy_template_type.py  0006_alter_slackmessage_id.py  0007_alter_slackmessage_id.py  0007_alter_slackmessagingpolicy_template.py
django_slack_tools/slack_messages/models/: __init__.py  mention.py  message.py  message_recipient.py  messaging_policy.py
django_slack_tools/slack_messages/template_loaders/: __init__.py  base.py  django.py  errors.py
django_slack_tools/utils/: dict_template.py  import_helper.py  repr.py
django_slack_tools/utils/django/: form_fields.py  widgets.py
django_slack_tools/utils/slack/: __init__.py  django.py  message.py
django_slack_tools/utils/template/: __init__.py  base.py  dict.py  django.py
docs/: api-references.md  index.md  quick-start.md
docs/api-references/: messenger.md  slack-messages.md
docs/tutorials/: quick-start.md
docs/usages/: celery-support.md  sending-messages.md
examples/todo/: .env.example  Makefile  README.md  docker-compose.yaml  dump.json  manage.py  pyproject.toml
examples/todo/todo/: celery.py  settings.py  slack_app.py  urls.py
examples/todo/todo_app/: apps.py  models.py  services.py  signals.py  slack_listeners.py
examples/todo/todo_app/migrations/: 0001_initial.py
examples/todo/todo_app/templates/: todo-created.xml  todo-updated.xml
examples/todo_bot/: manage.py  settings.py  urls.py  wsgi.py
ngrok/: config.yaml
testproj/: manage.py  settings.py  urls.py  views.py  wsgi.py
testproj/config/: celery.py  settings.py  slack_app.py  urls.py  wsgi.py
testproj/templates/: 001-template.xml  greet.xml
testproj/todo/: apps.py  slack_listeners.py
tests/: _factories.py  _helpers.py  conftest.py  test_app_settings.py  test_backends.py  test_choices.py  test_message.py  test_views.py
tests/admin/: _helpers.py  test_mention.py  test_message.py  test_message_recipient.py  test_messaging_policy.py
tests/backends/: test_dummy.py  test_logging.py  test_slack.py
tests/messenger/: _factories.py  _helpers.py  test_messenger.py  test_request.py  test_response.py
tests/models/: _factories.py  _helpers.py  test_mention.py  test_message.py  test_message_recipient.py  test_messaging_policy.py
tests/slack_messages/: _factories.py  _helpers.py  conftest.py  test_apps.py  test_celery.py  test_message.py  test_messenger.py  test_request.py  test_response.py  test_shortcuts.py  test_tasks.py  test_validators.py
tests/utils/: test_dict_template.py  test_model_mixins.py  test_repr.py  test_slack.py  test_widgets.py
(+71 files in other folders)
