[project]
name = "django-slack-tools"
version = "0.3.1"
description = "Little helpers working with Slack bot 🤖 in Django."
authors = [{ name = "Yuchan Lee", email = "lasuillard@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9, <4.0"
dependencies = [
	"django>=4.2,<5.2",
	"pydantic>=2,<3",
	"slack-bolt>=1,<2",
	"xmltodict>=0.14.1,<1",
]

[project.optional-dependencies]
celery = ["celery>=5,<6"]
dev = [
	"celery[django,redis]>=5,<6",
	"django-celery-beat>=2,<3",
	"django-celery-results>=2,<3",
	"django-debug-toolbar>=4.4,<6.0",
	"django-extensions~=3.2",
	"django-stubs[compatible-mypy]~=5.1",
	"ipykernel~=6.27",
	"mkdocs-material~=9.5",
	"mkdocs~=1.6",
	"mkdocstrings[python]~=0.26",
	"mypy~=1.11",
	"ruff~=0.6",
]
test = [
	"coverage~=7.3",
	"django-coverage-plugin~=3.1",
	"factory-boy~=3.3",
	"faker>=30.3,<37.0",
	"nox>=2024.10.9,<2025.3.0",
	"pytest-cov>=5,<7",
	"pytest-django~=4.9",
	"pytest-sugar~=1.0",
	"pytest~=8.0",
	"testcontainers>=4.10.0",
]

[project.urls]
Homepage = "https://github.com/lasuillard/django-slack-tools"
Repository = "https://github.com/lasuillard/django-slack-tools.git"
Issues = "https://github.com/lasuillard/django-slack-tools/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_slack_tools"]

[tool.ruff]
target-version = "py39"
lint.select = ["ALL"]
lint.ignore = ["ANN401", "TD003", "FIX002", "D105"]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = ["D", "S101", "PLR2004", "SLF001"]
"testproj/*" = ["D100"]
"*/migrations/*" = ["RUF012", "D"]
"examples/*" = ["D100", "D101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
exclude = ['^\.venv/*']
plugins = ["mypy_django_plugin.main"]
namespace_packages = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
strict_optional = true
no_implicit_reexport = true
explicit_package_bases = true

[tool.django-stubs]
django_settings_module = "testproj.config.settings"

[tool.pytest.ini_options]
addopts = [
	"--strict-markers",
	"--doctest-modules",
	"--ds=testproj.config.settings",
	"--reuse-db",
	"--cov",
	"--cov-report=term",
	"--cov-report=xml",
	"--show-capture=no",
	"--junitxml=junit.xml",
	"-rs",
]
testpaths = ["tests"]
markers = [
	"unit: Unit tests.",
	"integration: Integration tests.",
	"slack: Tests working with Slack.",
	"celery: Tests working with Celery.",
]

[tool.coverage.run]
include = ["django_slack_tools/*"]
omit = ["*/migrations/*", "*tests*"]
branch = true
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
