[project]
name = "todo"
version = "0.1.0"
description = "Example To-Do Slack bot application."
authors = [{ name = "Yuchan Lee", email = "lasuillard@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = ["django-slack-tools"]

[tool.uv]
package = false

[tool.uv.sources]
django-slack-tools = { path = "../../" }
