[project]
name = "todo"
version = "0.1.0"
description = "Example To-Do Slack bot application."
authors = [{ name = "Yuchan Lee", email = "lasuillard@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = ["django-slack-tools", "django>=5,<6"]

[tool.uv]
package = false

[tool.uv.sources]
django-slack-tools = { path = "../../" }
